<resources>
    <string name="app_name">Fulcrum</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="a_confirmation_code_was_sent">A confirmation code was sent.</string>
    <string name="please_enter_the_code_below_to_confirm_your_account">Please enter the code below to confirm your account.</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">Confirm</string>
    <string name="_00_00">00:00</string>
    <string name="resend_code">Resend Code?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_personality">Personality</string>
    <string name="lbl_edit_photo">Edit Photo</string>
    <string name="lbl_last_name2">Last name</string>
    <string name="lbl_your_email">Your Email</string>
    <string name="lbl_next">Next</string>
    <string name="msg_research_produc">Research Product for UI8</string>
    <string name="lbl_indonesian">Indonesian|</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
    <string name="lbl_adalahalcana">AdalahAlcana|</string>
    <string name="lbl_adalah">Adalah</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_date_of_birth">Date of birth</string>
    <string name="lbl_first_name">First Name</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_first_name2">First name</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_28_may_2002">28 May 2002|</string>
    <string name="msg_when_community">When community comes unity</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="lbl_setting">Setting</string>
    <string name="msg_your_settings_s">Your settings so that we are comfortable</string>
    <string name="msg_this_is_your_co">this is your community, help them to grow more</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lbl_change_save">Change save</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_welcome_to_our">Welcome to our community</string>
    <string name="lbl_fulcrum">Fulcrum</string>
    <string name="lbl_work_today">Work Today</string>
    <string name="lbl_hobby">Hobby</string>
    <string name="lbl_username">UserName</string>
    <string name="msg_create_action_p">Create Action Plan</string>
    <string name="lbl_02_april_2021">02 April 2021</string>
    <string name="msg_helping_others">Helping others means helping yourself. </string>
    <string name="msg_make_your_job_e">Make your job easier with our reminders</string>
    <string name="msg_if_you_are_alwa">If you are always helping others you are helping yourself too</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_fourta">Fourta|</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="msg_joined_6_month">Joined 6 Month Ago</string>
    <string name="lbl_work_today_s2">"Work Today's"</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_sleep">Sleep|</string>
    <string name="lbl_alcanasatre">Alcanasatre</string>
    <string name="lbl_e_mail2">E-mail</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_login_or_signup">Login or SignUp</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="msg_our_community_i3">"Our community is always there 24 hours if you need it, don't hesitate to join"</string>
    <string name="msg_our_community_i2">"Our community is your community too so let's strengthen our community together"</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_our_community_i">our community is ready to help you to join our best platform</string>
    <string name="lbl_signup2">SignUp</string>
    <string name="lbl_work_today_s">Work Today\u2019s</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_get_in_through">Get in through</string>
    <string name="msg_make_a_wish_lis">Make a wish list</string>
    <string name="msg_terms_and_condi">Terms and Conditions</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>